<resources>
    <string name="app_name">FeelingLoadApp</string>
    <string name="app_logo_description">FeelingLoadApp logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Dont\' have an account? Register Here</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="coach">Coach</string>
    <string name="player">Player</string>
    <string name="register">Register</string>
    <string name="login_here">Already Registered? Login Here</string>
    <string name="training_date">Training date</string>
    <string name="rpe_registered">RPE Registered</string>
    <string name="save">SAVE</string>
    <string name="photo">Photo</string>
    <string name="hour">Hour</string>
    <string name="player_photo">Player photo</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time_format">hh:mm</string>
    <string name="stats">STATS</string>
    <string name="add">ADD</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="update">Update</string>
    <string name="rpe_completed">RPE Completed</string>
    <string name="select_photo">Select Photo</string>
    <string name="logout">Logout</string>
    <string name="rpe">RPE</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="avg">Avg:</string>
    <string name="rpetext">RPE:</string>
</resources>
