<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/list_header">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/training_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/hour"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/rpe_completed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/trainings_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/trainings_list_item"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/list_header"
        />
    <LinearLayout android:id="@+id/footer"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/addNewTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.ButtonBar"/>
        <Button
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/stats"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.ButtonBar"/>
    </LinearLayout>
</RelativeLayout>