<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.uoc.churtado.feelingloadapp.fragments.TrainingsFragment"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/et_mostrar_fecha_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/date_format"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="8dp"
            android:enabled="false"/>
        <ImageButton
            android:id="@+id/ib_obtener_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:tint="@color/white"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/et_mostrar_hora_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/time_format"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:enabled="false"/>
        <ImageButton
            android:id="@+id/ib_obtener_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_recent_history"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            tools:ignore="ContentDescription"
            android:background="@color/colorPrimary"
            android:tint="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveTraining"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>